# pyfector

./: .gitignore  CHANGELOG.md  LICENSE  README.md  REFERENCE.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
benchmarks/: benchmark_vs_r.py  gpu_vs_cpu.py  large_scale.py  realistic_benchmark.py
docs/: index.html  pyfector.html  search.js
docs/pyfector/: fect.html
src/pyfect/: __init__.py  backend.py  cv.py  diagnostics.py  estimators.py  fect.py  inference.py  linalg.py  panel.py  plotting.py
src/pyfector/: __init__.py  backend.py  cv.py  diagnostics.py  estimators.py  fect.py  inference.py  linalg.py  panel.py  plotting.py
tests/: benchmark_vs_r.py  conftest.py  test_bootstrap_se.py  test_cv_folds_perf.py  test_linalg.py  test_pressure.py  test_robust.py  test_smoke.py  test_stress.py  test_vs_r.py  test_vs_r_fect.py
tests/comparison/: README.md  synthetic_comparison.html  synthetic_comparison.qmd
